--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+.kombai
+kombai-debug.log*
+kombai
 node_modules
 dist
 dist-ssr
@@ -22,3 +25,6 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+SUPABASE_SETUP.md
+supabase-schema.sql
